--- a/README
+++ b/README
@@ -1,1 +1,8 @@
 MailByte. Newsletter and campaign manager. 
+
+MrByte. A newsletter manager. You can send out mass email campaigns. 
+Purchase credits? Or pay for a subscription which allows a total of X 
+subscribers. X emails per month. Have an api so that subscribers can be 
+added / removed from an account with ease. Notifications for the user 
+when they are reaching their subscriber limit / email limit. Offer 
+discounts for repeat custom ?
